[gd_scene load_steps=7 format=3 uid="uid://b7s3y7kocru08"]

[ext_resource type="Script" uid="uid://ccp76xtdaxhfo" path="res://main.gd" id="1_ig7tw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ig7tw"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_0xm2m"]
sky_material = SubResource("ProceduralSkyMaterial_ig7tw")

[sub_resource type="Environment" id="Environment_h2yge"]
background_mode = 2
sky = SubResource("Sky_0xm2m")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7dm0k"]
albedo_color = Color(0.628358, 0.68742, 0.108291, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ig7tw"]
shading_mode = 0
disable_receive_shadows = true

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h2yge")

[node name="BC" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BC_left" type="BoxContainer" parent="BC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="shape_list" type="ItemList" parent="BC/BC_left"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BC_center" type="BoxContainer" parent="BC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="BC/BC_center"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewport" type="SubViewport" parent="BC/BC_center/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(687, 648)
render_target_update_mode = 4

[node name="Scene3D" type="Node3D" parent="BC/BC_center/SubViewportContainer/SubViewport"]

[node name="CSGBox3D" type="CSGBox3D" parent="BC/BC_center/SubViewportContainer/SubViewport/Scene3D"]
visible = false
material = SubResource("StandardMaterial3D_7dm0k")

[node name="CSGBox3D2" type="CSGBox3D" parent="BC/BC_center/SubViewportContainer/SubViewport/Scene3D"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
visible = false
flip_faces = true
material = SubResource("StandardMaterial3D_ig7tw")

[node name="Camera3D" type="Camera3D" parent="BC/BC_center/SubViewportContainer/SubViewport/Scene3D"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1, 2)
current = true

[node name="BC_right" type="BoxContainer" parent="BC"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="GC" type="GridContainer" parent="BC/BC_right"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="btnBox" type="Button" parent="BC/BC_right/GC"]
layout_mode = 2
text = "Add box"

[node name="btnCylinder" type="Button" parent="BC/BC_right/GC"]
layout_mode = 2
text = "Add cylinder"

[node name="btnClear" type="Button" parent="BC/BC_right/GC"]
layout_mode = 2
text = "CLEAR"

[node name="P" type="Panel" parent="BC/BC_right"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="GC" type="GridContainer" parent="BC/BC_right/P"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="lbl1" type="Label" parent="BC/BC_right/P/GC"]
layout_mode = 2
text = "Properties"

[node name="Control" type="Control" parent="BC/BC_right/P/GC"]
layout_mode = 2

[node name="lbl2" type="Label" parent="BC/BC_right/P/GC"]
layout_mode = 2
text = "Name"

[node name="lblName" type="Label" parent="BC/BC_right/P/GC"]
layout_mode = 2

[node name="lbl3" type="Label" parent="BC/BC_right/P/GC"]
layout_mode = 2
text = "Color"

[node name="col_picker" type="ColorPickerButton" parent="BC/BC_right/P/GC"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Color"
color = Color(0.481789, 0.481789, 0.481789, 1)

[node name="lbl4" type="Label" parent="BC/BC_right/P/GC"]
layout_mode = 2
text = "Position"

[node name="lePos" type="LineEdit" parent="BC/BC_right/P/GC"]
layout_mode = 2

[node name="lbl5" type="Label" parent="BC/BC_right/P/GC"]
layout_mode = 2
text = "Size"

[node name="leSize" type="LineEdit" parent="BC/BC_right/P/GC"]
layout_mode = 2

[node name="lbl6" type="Label" parent="BC/BC_right/P/GC"]
layout_mode = 2
text = "Rotation"

[node name="leRot" type="LineEdit" parent="BC/BC_right/P/GC"]
layout_mode = 2

[connection signal="empty_clicked" from="BC/BC_left/shape_list" to="." method="_on_shape_list_empty_clicked"]
[connection signal="item_selected" from="BC/BC_left/shape_list" to="." method="_on_shape_list_item_selected"]
[connection signal="gui_input" from="BC/BC_center/SubViewportContainer" to="." method="_on_sub_viewport_container_gui_input"]
[connection signal="pressed" from="BC/BC_right/GC/btnBox" to="." method="_on_btn_box_pressed"]
[connection signal="pressed" from="BC/BC_right/GC/btnCylinder" to="." method="_on_btn_cylinder_pressed"]
[connection signal="pressed" from="BC/BC_right/GC/btnClear" to="." method="_on_btn_clear_pressed"]
